# HUFFMAN

./: CMakeCache.txt  CMakeLists.txt  HUFFMAN  HUFFMAN.cbp  Main  Makefile  check_two_files.cpp  cmake_install.cmake  main.cpp
lib/: builder.cpp  builder.h  coder.cpp  coder.h  compressor.cpp  compressor.h  counter.cpp  counter.h  decoder.cpp  decoder.h  tree.cpp  tree.h
tests/: Bible.huf  bible.txt  interest_test.huf  interest_test.in  interest_test.out  one_a_test.huf  out_test.huf  out_test.out  qe.in  qe.out  script.sh  small_test.huf
